<resources>
    <string name="app_name">MankomApps</string>
    <string name="manajemen_komunikasi">Manajemen Komunikasi</string>
    <string name="fikom">FIKOM</string>
    <string name="tentang_kami">Tentang Prodi</string>
    <string name="visi">Menjadi Program Studi yang unggul di bidang Manajemen Komunikasi dan memiliki komitmen tinggi serta mampu bersaing di tingkat nasional, regional serta internasional pada tahun 2026</string>
    <string name="misi1">\t1. Menyelenggarakan pendidikan bidang Manajemen Komunikasi yang berkualitas, profesional, dan beretika; yang unggul di bidang komunikasi strategis, komunikasi pemasaran dan manajemen media \n
        2. Menyelenggarakan penelitian di bidang Manajemen Komunikasi yang berkualitas dan mampu menyelesaikan masalah di bidang Manajemen Komunikasi; \n
        3. Menyelenggarakan Pengabdian Kepada Masyarakat (PKM) yang berkualitas dengan mengimplementasikan keilmuan di bidang Manajemen Komunikasi; \n
        4. Melaksanakan manajemen pendidikan dengan menerapkan prinsip penjaminan mutu (quality assurance), yang kredibel, transparan, akuntabel, bertanggung jawab, dan adil;\n
        5. Menjalin kemitraan secara berkesinambungan dengan menerapkan prinsip kesetaraan dan keterpercayaan.</string>
    <string name="akreditasi">Pada tahun 2017 melalui Surat Keputusan Badan Akreditasi Nasional Perguruan Tinggi (BAN-PT) Kementerian Riset, Teknologi, dan Pendidikan Tinggi No. 0897/SK/BAN-PT/Akred/S/III/2017,\n<b>Program Studi Manajemen Komunikasi Fakultas Ilmu Komunikasi Universitas Padjadjaran
    terakreditasi dengan peringkat A</b></string>
    <string name="profil1">Lulusan Penyelenggaraan pendidikan di tingkat sarjana (S1) pada Program Studi Manajemen Komunikasi Fakultas Ilmu Komunikasi Universitas Padjadjaran diarahkan untuk menghasilkan 3 (tiga) profil lulusan, yaitu:</string>
    <string name="profil2">1. Strategist Communication Officer: Ahli mengelola (merencanakan, melaksanakan, menganalisis dan mengevaluasi) berbagai program komunikasi dalam konteks organisasi dan sosial \n2. Marketing Communication Officer: Ahli mengelola (merencanakan, melaksanakan, menganalisis dan mengevaluasi) berbagai program komunikasi pemasaran \n3. Media Management Officer: Ahli dalam mengelola media terkait dengan perencanaan dan produksi dalam konteks organisasi dan sosial</string>
    <string name="sejarah1">\t\t\t Sejarah berdirinya Fakultas Ilmu Komunikasi Universitas Padjadjaran diawali dari pemikiran sekelompok tokoh pendiri, yaitu Prof. Dr. Mr. R. Moestopo, Azhary Sulaiman, A.Z. Palindih, S.Rochnadi, dan R. Roekomy yang hasilnya pada 6 September 1960 terbit Surat Keputusan Ketua Yayasan Pembina Unpad mengenai pembukaan Fakultas Jurnalistik dan Publisitik. Fakultas ini kemudian resmi dibuka 18 September 1960 dengan diangkatnya Prof. Dr. Mr. R. Moestopo sebagai Dekan Fakultas baru ini. Tanggal 18 September kemudian ditetapkan sebagai hari lahirnya Fikom. Selanjutnya pada 8 November 1960, pembukaan Fakultas Jurnalistik dan Publisistik secara resmi disampaikan kepada Menteri PTIP, dan pada 1 Februari 1962 Fakultas ini menjadi Fakultas Publisistik dan Jurnalistik. </string>
    <string name="sejarah2">\t\t\t Berdasarkan berbagai pertimbangan baik akademis dan kebutuhan akan lulusan yang terserap di dunia kerja, pada 23 April 1963 terjadi perubahan nama pada Fakultas ini menjadi Fakultas Publisistik Unpad dan pada 27 Februari tahun 1964 lulusan sarjana fakultas ini mendapatkan kesetaraan ijasah negeri. Fakultas ini secara resmi bernaung di bawah Universitas Padjadjaran berdasarkan Surat Keputusan Menteri PTIP No. 225 tertanggal 1 November 1965 dimana terjadi perubahan bahwa Institut Publisistik menjadi salah satu Fakultas yang ada di lingkungan Universitas Padjadjaran dengan nama Fakultas Publisistik yang mempunyai lima jurusan yaitu:\n\t\t 1. Jurnalistik; \n\t\t 2. Penerangan/Propaganda; \n\t\t 3. Public Relations; \n\t\t 4. Graphic Arts/Photography; \n\t\t5. Telekomunikasi (Komunikasi Massa).</string>
    <string name="sejarah3">\t\t\t Dinamika perubahan masih terus terjadi ketika orientasi ilmu Komunikasi mengalami pergeseran dari Eropa, khususnya Jerman ke Amerika, dan ini dinyatakan dengan Surat Keputusan Presiden RI No. 47 tahun 1982 tertanggal 7 September 1982 tentang susunan organisasi Unpad, dan Surat Keputusan Kepmendikbud RI No.133/O/1983 tanggal 5 Maret 1983 tentang organisasi dan tata kerja Unpad, bahwa Fakultas Publisistik diubah namanya menjadi Fakultas Ilmu Komunikasi (Fikom). Fakultas ini, yang merupakan Fakultas kesebelas di Unpad berkembang dengan sangat pesat. Semenjak berubah menjadi Fakultas Ilmu Komunikasi, Fakultas ini memiliki empat jurusan yaitu:\n\t\t 1. Jurnalistik; \n\t\t 2. Hubungan Masyarakat; \n\t\t 3. Penerangan; \n\t\t 4. Perpustakaan.</string>
    <string name="sejarah4">\t\t\t Keadaan fakultas dengan memiliki 4 (empat) jurusan sudah berlangsung sampai dengan tahun 1995, karena pada tahun 1996 Dikti mengeluarkan sebuah kebijakan untuk menyatukan beberapa jurusan yang memiliki rumpun ilmu yang sama ke dalam satu program studi, sehingga dari tahun 1996 di Fikom mulai dikenal:\n\t\t 1. Program Studi Ilmu Komunikasi dengan 3 (tiga) konsentrasi yaitu: Jurnalistik, Hubungan Masyarakat, dan Manajemen Komunikasi. \n\t\t 2. Program Studi Ilmu Perpustakaan.</string>
    <string name="sejarah5">\t\t\t Perkembangan Fakultas kesebelas di Unpad ini terjadi dengan pesat sejalan dengan era informasi yang tidak terbendung, sehingga untuk memenuhi permintaan berbagai pihak melalui SK No. 65/DIKTI/Kep/1999 pada tahun 1999 Fikom membuka program Diploma III PAKT dengan Peminatan Kehumasan, Penyiaran, Periklanan, dan Komunikasi Bisnis serta Informasi dan Perpustakaan. Selanjutnya melalui SK No. 184/DIKTI/Kep/1997 mulai tahun akademik 1997/1998 Fikom membuka program Ekstensi dengan tujuan untuk memberikan kesempatan pada masyarakat untuk menempuh jenjang pendidikan yang lebih tinggi. Perjalanan selanjutnya dengan niat baik Fikom pun mengikuti perkembangan keilmuan dan permintaan pasar yang mengharuskan ilmu dan pengetahuan itu terus maju berkembang maka dibuka pula program pascasarjana baik jenjang magister maupun tingkat doktoral. Pada tahun 2009 turun SK DIKTI Nomor 1162/D/T/2009 tanggal 15 Juli 2009 tentang izin penyelenggaran pendidikan Magiste (S2).</string>
    <string name="sejarah6">\t\t\t Usaha untuk memenuhi kebutuhan masyarakat dan tuntutan perkembangan ilmu dan teknologi komunikasi, Fakultas Ilmu Komunikasi berusaha terus untuk meningkatkan Status Bidang Kajian menjadi Program studi. Berkat perjuangan tersebut pada tahun 2013 turun SK DIKTI nomor 559/E/O/2013 tanggal 13 November 2013 tentang Izin penyelenggaran pendidikan Program Studi Hubungan Masyarakat. Bahkan pada tahun 2014 tiga SK DIKTI turun secara berurutan 1) SK DIKTI nomor 68/E/O/2014 tangal 7 Mei 2014 tentang Izin penyelenggaraan pendidikan Program Studi Manajemen Komunikasi, 2) SK DIKTI nomor 72/E/O/2014 tanggal 7 Mei 2014 tentang izin penyelenggaraan pendidikan Program Studi Jurnalistik, 3) SK DIKTI nomor 309/E/0/2014 tanggal 12 Agustus 2014 tentang Izin penyelenggaran pendidikan Program Studi Televisi dan Film. Pada saat ini Fakultas Ilmu Komunikasi memiliki 9 (Sembilan) program Studi yaitu;\n</string>
    <string name="sejarah7">\t\t 1. Program Studi D4 Manajemen Produksi Media \n\t\t 2. Program Studi S1 Ilmu Komunikasi \n\t\t 3. Program Studi S1 Ilmu Perpustakaan \n\t\t 4. Program Studi S1 Hubungan Masyarakat \n\t\t 5. Program Studi S1 Manajemen Komunikasi 6. Program Studi S1 Jurnalistik \n\t\t 7. Program Studi S1 Televisi dan Film \n\t\t 8. Program Studi Magister Ilmu Komunikasi \n\t\t 9. Program Studi Doktor Ilmu Komunikasi</string>
    <string name="sejarah8">\t\t\t Untuk mendukung kelancaran proses pendidikan, Fakultas Ilmu Komunikasi memiliki 7 gedung di lokasi kampus Jatinangor. Gedung 1 digunakan untuk ruang perkantoran, auditorium dan dekanat, gedung 2 digunakan untuk kegiatan perkuliahan serta laboratorium, gedung 3 digunakan untuk ruang kantor program studi, ruang sidang bersama serta laboratorium, gedung 4 digunakan untuk ruang perkantoran, ruang kuliah serta ruang auditorium, Gedung 5 digunakan untuk ruang kuliah, gedung 6 digunakan untuk kegiatan kemahasiswaan, serta gedung 7 digunakan untuk ruang kantor, laboratorium, auditorium, perpustakaan dan ruang kuliah </string>
    <string name="pengertianlogo"><b>PENGERTIAN LAMBANG</b>\nLambang Hima Mankom Fikom Unpad adalah huruf persegi, segitiga, lingkaran berwarna ungu yang melingkari lingkaran hijau dalam latar elips berwarna kuning dan garis luar hijau bertuliskan “HIMPUNAN MAHASISWA MANAJEMEN KOMUNIKASI”.</string>
    <string name="sejarahHima1">\t\t\t Himpunan Mahasiswa Manajemen Komunikasi (Hima Mankom) adalah organisasi berdiri sejak 1983 dengan nama Hima Penerangan dan secara resmi berganti nama menjadi Hima Mankom sejak tahun 1997 (Sebelumnya bernama Hima Penerangan (1983)). Hima Mankom merupakan organisasi yang berada dalam naungan Program Studi Manajemen Komunikasi. Saat ini Hima Mankom senantiasa aktif dalam menghimpun segala macam potensi, minat, dan bakat yang dikemas dalam bentuk program kerja.\n\t\t\t Hima Mankom bertugas untuk menjadi wadah dalam menghimpun berbagai macam potensi dan berjuta talenta seluruh mahasiswa/i Manajemen Komunikasi Fikom Unpad. Dengan adanya wadah ini setiap individu diharapkan mampu menyalurkan berbagai macam mimpi sebagai sarana pembelajaran dalam rangka menjadikan seorang individu yang unggul.</string>
    <string name="sejarahHima2"><b>Fungsi</b>\n\t\t\t Berdasarkan BAB III Pasal 7 Anggaran Dasar, Hima Manajemen Komunikasi berfungsi untuk memfasilitasi seluruh anggota Hima dalam bidang organisasi, akademis, keprofesian, serta minat dan bakat. \n<b>Tujuan</b> \n\t\t\t Tujuan dari Hima Manajemen Komunikasi Fikom Unpad berdasarkan BAB III Pasal 8 adalah untuk menjadi sarana pengembangan dan akulturasi diri bagi anggota Hima sesuai dengan fungsinya.</string>
    <string name="unsurlogo"><b>UNSUR LAMBANG</b>\nHuruf “C” berwarna ungu yang berarti Communication.\nLingkaran berwarna hijau yang terletak di bagian tengah lambang melambangkan dunia.\nSegitiga, persegi, dan lingkaran melambangkan proses komunikasi (decoding, encoding, dan perception).\nWarna Ungu yang merupakan strata warna tertinggi, melambangkan raja dan kekuasaan.</string>
    <string name="artilogo"><b>ARTI LAMBANG</b>\nLambang Hima Mankom Fikom Unpad memiliki makna berkomunikasi pada dunia dengan kemampuan penguasaan dalam mengelola unsur-unsur komunikasi.</string>
    <string name="visikabinet"><b>VISI</b>\n“ Hima Mankom dengan kaki yang kokoh, langkah seirama, dalam mencapai puncak Berkolaborasi. “</string>
    <string name="misikabinet"><b>MISI</b>\n“<i>CONTINUOUS IMPROVEMENT</i>“\nPengembangan berkelanjutan yang dinamis dalam membangun iklim kerja responsif dan adaptif bagi Hima Mankom.\n“<i>ROLE OPTIMIZATION</i>”\nPengoptimalan peran Hima Mankom dalam rangka mencapai hasil yang fungsional dan efektif.\n“<i>SOCIAL INCLUSIVE</i>”\nMenjalin kerjasama dengan ranah internal dan eksternal.\n“<i>SUPPORTIVE COLLABORATION</i>“\nMenjadikan Hima Mankom sebagai wadah kolaborasi yang suportif.</string>
    <string name="logokabinet"><b>Logo yang Terbuka</b>\nMerepresentasikan Hima Mankom yang terbuka atas segala aspirasi dari pihak internal maupun eksternal.\n<b>Berjabat Tangan</b>\nMerepresentasikan kolaborasi, baik secara internal maupun eksternal Hima Mankom yang dilandaskan oleh keterbukaan. Tangan yang berada di puncak juga merepresentasikan puncak berkolaborasi.\n<b>Dua Garis Membentuk Gunung</b>\nMerepresentasikan bahwa perjalanan Kabinet Berkolaborasi diibaratkan dengan pendakian gunung: membutuhkan kaki yang kokoh serta langkah yang seirama. </string>
</resources>