<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sejarah">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints"
        app:layout_scrollFlags="enterAlways">

        <TextView
            android:id="@+id/toolbar2_text"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:gravity="center"
            android:text="Sejarah"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/sejarah1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/sejarah1"
                android:justificationMode="inter_word"
                app:layout_constraintBottom_toTopOf="@id/sejarah2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/sejarah2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5dp"
                android:text="@string/sejarah2"
                app:layout_constraintTop_toBottomOf="@id/sejarah1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/sejarah3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5dp"
                android:text="@string/sejarah3"
                app:layout_constraintTop_toBottomOf="@id/sejarah2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/sejarah4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5dp"
                android:text="@string/sejarah4"
                app:layout_constraintTop_toBottomOf="@id/sejarah3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/sejarah5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5dp"
                android:text="@string/sejarah5"
                app:layout_constraintTop_toBottomOf="@id/sejarah4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/sejarah6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5dp"
                android:text="@string/sejarah6"
                app:layout_constraintTop_toBottomOf="@id/sejarah5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/sejarah7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5dp"
                android:text="@string/sejarah7"
                app:layout_constraintTop_toBottomOf="@id/sejarah6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/sejarah8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5dp"
                android:text="@string/sejarah8"
                app:layout_constraintTop_toBottomOf="@id/sejarah7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>