<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HimpunanMahasiswa">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/sejarahHima"
        tools:ignore="MissingConstraints,NotSibling">

        <TextView
            android:id="@+id/toolbar2_text"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="Himpunan Mahasiswa"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="1dp">

            <Button
                android:id="@+id/sejarahHima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#806CA4"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Sejarah"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/toolbar2"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/teks_sejarahHima1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sejarahHima1"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sejarahHima" />

            <TextView
                android:id="@+id/teks_sejarahHima2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sejarahHima2"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teks_sejarahHima1" />

            <Button
                android:id="@+id/LogoHima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#806CA4"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="LOGO"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/teks_sejarahHima2"/>

            <ImageView
                android:id="@+id/gambarlogohima"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LogoHima"
                app:srcCompat="@drawable/logohima"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/pengertianlogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/pengertianlogo"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambarlogohima" />

            <TextView
                android:id="@+id/unsurlogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/unsurlogo"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pengertianlogo" />

            <TextView
                android:id="@+id/artilogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/artilogo"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/unsurlogo" />

            <Button
                android:id="@+id/kabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#806CA4"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Kabinet Berkolaborasi"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/artilogo"/>

            <TextView
                android:id="@+id/visimisikabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:text="VISI - MISI"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/kabinet"/>

            <TextView
                android:id="@+id/visikabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/visikabinet"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visimisikabinet" />

            <TextView
                android:id="@+id/misikabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/misikabinet"
                android:lineSpacingExtra="5dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visikabinet" />

            <TextView
                android:id="@+id/logokabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:text="LOGO"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/misikabinet"/>

            <ImageView
                android:id="@+id/gambarlogokabinet"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logokabinet"
                app:srcCompat="@drawable/logokabinet"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/teks_logokabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/logokabinet"
                android:lineSpacingExtra="5dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gambarlogokabinet" />

            <TextView
                android:id="@+id/strukturkabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:text="STRUKTUR"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/teks_logokabinet"/>

            <ImageView
                android:id="@+id/gambarstrukturkabinet"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/strukturkabinet"
                app:srcCompat="@drawable/strukturkab"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>